--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,18 +1,18 @@
 .button {
   display: inline-block;
-  background-color: #373937;
-  color: white;
-  border: solid 1px white;
-  padding: 10px 20px;
+  background-color:  var(--button-bg-color);
+  color: var(--button-text-color);
+  border: var(--button-border);
+  padding: var(--padding-small);
   font-size: 1rem;
   text-align: center;
   text-decoration: none; /* Ta bort understrykning från länken */
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  box-shadow: 0px 0px 6px white;
+  box-shadow: 0px 0px 6px var(--button-box-shadow-color);
 }
 
 .button:hover {
-  background-color: #fc051f;
+  background-color:darken(var(--button-bg-color), 90%);
 }
