--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,7 +1,8 @@
+
 .button {
   display: inline-block;
-  background-color:  var(--button-bg-color);
-  color: var(--button-text-color);
+  /* background-color:  var(--button-bg-color);
+  color: var(--button-text-color); */
   border: var(--button-border);
   padding: var(--padding-small);
   font-size: 1rem;
@@ -11,8 +12,16 @@
   border-radius: 5px;
   transition: background-color 0.3s ease;
   box-shadow: 0px 0px 6px var(--button-box-shadow-color);
+  & span {
+    padding: 1rem;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    box-shadow: 0px 0px 6px var(--button-box-shadow-color);
+    
+  }
 }
 
-.button:hover {
+/* .button:hover {
   background-color:darken(var(--button-bg-color), 90%);
-}
+} */
+
