Dont think its working

--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,27 +1,18 @@
 
 .button {
   display: inline-block;
-  /* background-color:  var(--button-bg-color);
-  color: var(--button-text-color); */
   border: var(--button-border);
   padding: var(--padding-small);
   font-size: 1rem;
   text-align: center;
   text-decoration: none; /* Ta bort understrykning från länken */
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   transition: background-color 0.3s ease;
   box-shadow: 0px 0px 6px var(--button-box-shadow-color);
   & span {
-    padding: 1rem;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    box-shadow: 0px 0px 6px var(--button-box-shadow-color);
-    
+    padding: var(--padding-small);
+    border-radius: var(--border-radius);
   }
 }
-
-/* .button:hover {
-  background-color:darken(var(--button-bg-color), 90%);
-} */
 
