--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: var(--text-color);
-  background-color: var(--bg-color);
+  /* color: var(--text-color);
+  background-color: var(--bg-color); */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
