--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: var(--font-weight);
 
   color-scheme: light dark;
   /* color: var(--text-color);
@@ -11,4 +11,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;  
+
+}
+
+a {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
 }
