--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,20 @@
   font-weight: var(--font-weight);
 
   color-scheme: light dark;
-  /* color: var(--text-color);
-  background-color: var(--bg-color); */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;  
 
+}
+
+body {
+  margin: 01rem;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
 a {
