--- a/src/pages/AddCard.module.css
+++ b/src/pages/AddCard.module.css
@@ -1,6 +1,11 @@
-.container {
+.addCardPage {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+}
+.container {
+  display: flex;
+  flex-flow: row wrap;
   gap: 1rem;
 }
