--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
 body {
   margin: 01rem;
   display: flex;
+  justify-content: center;
+  align-items: center;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
