--- a/src/pages/CardDetail.module.css
+++ b/src/pages/CardDetail.module.css
@@ -1,6 +1,15 @@
+.cardDetailPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
 .cardDetailContainer {
-  padding: 1rem;
-  
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1rem;
+  justify-content: center;
 }
 
 .cardPreview {
