--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -17,7 +17,7 @@
   list-style: none;
   display: flex;
   flex-flow: row wrap;
-  align-items: center;
+  align-items: end;
   justify-content: center;
   gap: 1rem;
   padding: 0;
