--- a/src/components/CardForm.module.css
+++ b/src/components/CardForm.module.css
@@ -1,31 +1,30 @@
-form {
+.form {
   display: flex;
   flex-direction: column;
   padding: 0 1rem ;
+  gap: 0.5rem;
+}
+.formDiv {
+  display: flex;
+  flex-direction: column;    
+}
+.formLabel {
+  padding-left: 8px;
+}
+.formInput, .formSelect {
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  background-color: rgba(110, 109, 112, 0.189);
+  border-radius: 20px;
+  &:focus {
+    border-color: black;
+  }
+}
+.formInput {
+  max-width: 260px;
+}
 
-  div {
-    display: flex;
-    flex-direction: column;    
-  }
-  label {
-    padding-left: 8px;
-  }
-  input {
-    max-width: 260px;
-    background-color: rgba(110, 109, 112, 0.189);
-    border-radius: 20px;
-    &:focus {
-      border-color: black;
-    }
-  }
-  select {
-    max-width: fit-content;
-    background-color: rgba(110, 109, 112, 0.189);
-    border-radius: 20px;
-  }
-  
-  button {
-    align-self: center;
-    margin: 1rem 0 0 0;
-   }
+.formSelect {
+  max-width: fit-content;
+  margin: 0 0 0 1rem;
 }
