--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: var(--line-height);
   font-weight: var(--font-weight);
 
   color-scheme: light dark;
